# python_SQL_and_NoSQL

./: .gitignore  ex_Postgresql.py  gitignore  local.env  pyproject.toml  settings.py
_mysql-connector-python/: database_querys.py  teste.py
_pymysql/: useages.py  utils.py
_redis/: main.py
click_house/: client.py  create_table.py  docker-compose.yaml  insert.py  main.py  query.py
errors/: sql_error.py
ex_elasticsearch/: docker-compose.yaml  main.py
ex_mysql-connector-python/: database_query.py
ex_pymysql/: database_shema.py  utils.py
ex_redis/: cache_expiration.py  client.py  decorators.py  docker-compose.yaml  redis_repository.py  redis_utils.py
ex_sqlalchemy/: alembic.ini  base.py  connection.py  models.py  orm_utils.py  populate_db.py  recreate_tables.py  run_migration.py  test.py  utils.py
sqlalchemy_/: connection.py  models.py  teste.db  utils.py
