[tool.poetry]
name = "python_database"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.32"
SQLAlchemy-serializer = "^1.4.1"
PyMySQL = "^1.0.2"
mysql-connector-python = "^8.0.28"
redis = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
