[tool.poetry]
name = "python_database"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "*"
SQLAlchemy-serializer = "*"
PyMySQL = "*"
mysql-connector-python = "*"
redis = "*"
python-dotenv = "*"

# elasticsearch = "7.14.0"
clickhouse-connect = "^0.8.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
